--- a/sass/firstPage.scss
+++ b/sass/firstPage.scss
@@ -52,7 +52,11 @@ header {
 
 @media (min-width: 320px) {
     .text-item {
-        padding: 50px 0;
+        padding: 30px 0;
+
+        h1 {
+            font-size: 40px;
+        }
     }
 }
 
