--- a/sass/services.scss
+++ b/sass/services.scss
@@ -52,3 +52,23 @@ $h2-color: #1a77cd;
         padding: 78px 0 156px;
     }
 }
+
+//Banking and Finance page
+
+@media(min-width: 320px){
+
+  .bankingAndFinance {
+      padding: 50px 0 80px;
+  }  
+
+}
+
+@media(min-width: 992px){
+
+    .bankingAndFinance {
+        padding: 60px 0 85px;
+    }  
+  
+  }
+  
+
