--- a/sass/ourTeam.scss
+++ b/sass/ourTeam.scss
@@ -6,7 +6,6 @@
     }
 }
 
-
 @media (min-width: 992px) {
     .meet-our-team {
         padding: 50px 0 100px;
@@ -38,17 +37,59 @@
         }
     }
     h4 {
-     color: #1E1E1E;
-     letter-spacing: normal;
-     line-height: 27px;
-     font-size: 22px;
+        color: #1e1e1e;
+        letter-spacing: normal;
+        line-height: 27px;
+        font-size: 22px;
     }
 
     p {
-        color: #1A77CD;
+        color: #1a77cd;
         letter-spacing: normal;
         line-height: 27px;
         font-size: 18px;
         font-weight: 500;
     }
 }
+
+//Team Member page
+
+.team-member-first {
+    .header {
+        h1 {
+            color: #1e1e1e;
+            letter-spacing: normal;
+            line-height: 64px;
+            font-size: 40px;
+        }
+
+        p {
+            color: #1a77cd;
+            letter-spacing: normal;
+            line-height: 27px;
+            font-size: 18px;
+        }
+    }
+    .paragraph {
+        p {
+            color: #1e1e1e;
+            letter-spacing: normal;
+            line-height: 25px;
+            font-size: 16px;
+            font-weight: 300;
+        }
+    }
+}
+
+@media (min-width: 320px) {
+    .team-member-first {
+        padding: 30px 0 60px;
+    }
+}
+
+@media (min-width: 992px) {
+    .team-member-first {
+        padding: 50px 0 130px;
+    }
+}
+
