--- a/sass/ourTeam.scss
+++ b/sass/ourTeam.scss
@@ -15,6 +15,7 @@
 .meet-our-team {
     .team-member {
         position: relative;
+        overflow: hidden;
 
         .fa-linkedin-in {
             position: absolute;
